# Helix-Workplace

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/routers/: __init__.py  agent.py  model.py  prompt.py  pulse.py  skill.py  tools.py
docs/: IMPLEMENTATION_PLAN.md  TASK.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/agents/: page.tsx
frontend/src/app/files/: page.tsx
frontend/src/app/models/: page.tsx
frontend/src/app/prompt/: page.tsx
frontend/src/app/pulse/: page.tsx
frontend/src/app/skills/: page.tsx
frontend/src/app/tools/: page.tsx
frontend/src/components/layout/: AppSidebar.tsx  CommandBar.tsx  QuickPanel.tsx  StatusBar.tsx
